--- a/ASP.NET_EducationPlatform/ASP.NET_EducationPlatform.csproj
+++ b/ASP.NET_EducationPlatform/ASP.NET_EducationPlatform.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EducationPlatfotm.Domain\EducationPlatfotm.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
