--- a/ASP.NET_EducationPlatform/ASP.NET_EducationPlatform.csproj
+++ b/ASP.NET_EducationPlatform/ASP.NET_EducationPlatform.csproj
@@ -55,7 +55,10 @@
 
   <ItemGroup>
     <None Include="wwwroot\fonts\fontawesome-webfont.svg" />
+    <None Include="wwwroot\fonts\fontawesome-webfont.woff2" />
     <None Include="wwwroot\fonts\glyphicons-halflings-regular.svg" />
+    <None Include="wwwroot\fonts\glyphicons-halflings-regular.woff2" />
+    <None Include="wwwroot\js\bootstrap.min.js" />
   </ItemGroup>
 
   <ItemGroup>
