--- a/ASP.NET_EducationPlatform/ASP.NET_EducationPlatform.csproj
+++ b/ASP.NET_EducationPlatform/ASP.NET_EducationPlatform.csproj
@@ -72,4 +72,8 @@
     <ProjectReference Include="..\EducationPlatfotm.Domain\EducationPlatfotm.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\Mapping\" />
+  </ItemGroup>
+
 </Project>
