--- a/ASP.NET_EducationPlatform/ASP.NET_EducationPlatform.csproj
+++ b/ASP.NET_EducationPlatform/ASP.NET_EducationPlatform.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EducationPlatform.DAL\EducationPlatform.DAL.csproj" />
     <ProjectReference Include="..\EducationPlatfotm.Domain\EducationPlatfotm.Domain.csproj" />
   </ItemGroup>
 
