--- a/ASP.NET_EducationPlatform/appsettings.json
+++ b/ASP.NET_EducationPlatform/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer" : "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=EduPlatform.db;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
